Made post content wrap by breaking word ro avoid overflow

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -171,6 +171,7 @@ h2 {
 	padding-left: 5px;
 	text-align: center;
 	font-size: 2rem;
+	word-wrap: break-word;
 }
 
 .post-content {
@@ -179,6 +180,7 @@ h2 {
 	-webkit-box-orient: vertical;
 	overflow: hidden;
 	margin-bottom: 10px;
+	word-wrap: break-word;
 }
 
 .post-content-hidden {
